tests/NormalTests/paczka1/fuzzy1/61760029.err
Error in line 4: BHdBRp05 S478 55,3
Error in line 7: BHdBRp05 A457 83,3
Error in line 11: Njx5od S391 35,4
Error in line 15: Njx5od S478 47,2
Error in line 23: S478 A457 97,2
Error in line 22: Njx5od A457 59,6
Error in line 31: O1YOTbuf7qX S3\1 8,2
Error in line 29: K7R A457 3,9
